--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,16 @@ services:
       GITLAB_OMNIBUS_CONFIG: |
         external_url 'https://gitlab.eth.su'
         gitlab_rails['gitlab_shell_ssh_port'] = 22
+        # smtp settings documentation available here https://docs.gitlab.com/omnibus/settings/smtp.html
         gitlab_rails['smtp_enable'] = true
+        gitlab_rails['smtp_address'] = 'exim'
+        gitlab_rails['smtp_port'] = 25
+        gitlab_rails['smtp_domain'] = 'exim'
+        gitlab_rails['smtp_tls'] = false
+        gitlab_rails['smtp_openssl_verify_mode'] = 'none'
+        gitlab_rails['smtp_enable_starttls_auto'] = false
+        gitlab_rails['smtp_ssl'] = false
+        gitlab_rails['smtp_force_ssl'] = false
         # Add any other gitlab.rb configuration here, each on its own line
     ports:
       - '80:80'
@@ -40,6 +49,8 @@ services:
     hostname: 'gitlab.eth.su'
     ports:
       - '2525:25'
+    networks:
+      - gitlab
 networks:
   gitlab:
     name: gitlab-network
