--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     image: 'gitlab/gitlab-ce:latest'
     restart: always
     container_name: 'gitlab'
-    hostname: 'gitlab.eth.su'
+    hostname: 'gitlab.test.com'
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'https://gitlab.eth.su'
+        external_url 'https://gitlab.test.com'
         gitlab_rails['gitlab_shell_ssh_port'] = 22
         # smtp settings documentation available here https://docs.gitlab.com/omnibus/settings/smtp.html
         gitlab_rails['smtp_enable'] = true
@@ -46,7 +46,7 @@ services:
     image: tianon/exim4
     restart: always
     container_name: 'exim'
-    hostname: 'gitlab.eth.su'
+    hostname: 'gitlab.test.com'
     ports:
       - '2525:25'
     networks:
