--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
+---
 version: '3.6'
 services:
   web:
     image: 'gitlab/gitlab-ce:latest'
     restart: always
     container_name: 'gitlab'
-    hostname: 'gitlab.test.com'
+    hostname: '$GITLAB_DOMAIN'
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'https://gitlab.test.com'
+        external_url 'https://$GITLAB_DOMAIN'
         gitlab_rails['gitlab_shell_ssh_port'] = 22
-        # smtp settings documentation available here https://docs.gitlab.com/omnibus/settings/smtp.html
         gitlab_rails['smtp_enable'] = true
         gitlab_rails['smtp_address'] = 'exim'
         gitlab_rails['smtp_port'] = 25
@@ -19,11 +19,10 @@ services:
         gitlab_rails['smtp_enable_starttls_auto'] = false
         gitlab_rails['smtp_ssl'] = false
         gitlab_rails['smtp_force_ssl'] = false
-        # Add any other gitlab.rb configuration here, each on its own line
     ports:
       - '80:80'
       - '443:443'
-      - '222:22'
+      - '22:22'
     volumes:
       - '$GITLAB_HOME/config:/etc/gitlab'
       - '$GITLAB_HOME/logs:/var/log/gitlab'
@@ -32,23 +31,26 @@ services:
     networks:
       - gitlab
   gitlab-runner:
-    image: gitlab/gitlab-runner:alpine
-    container_name: gitlab-runner    
+    image: gitlab/gitlab-runner:latest
+    container_name: gitlab-runner
     restart: always
     depends_on:
       - web
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - '$GITLAB_HOME/gitlab-runner:/etc/gitlab-runner'
+      - '$GITLAB_HOME/gitlab-runner/config:/etc/gitlab-runner'
+      - '$GITLAB_HOME/gitlab-runner/data:/home/gitlab_ci_multi_runner/data'
+    environment:
+      - CI_SERVER_URL=https://$GITLAB_DOMAIN/ci
     networks:
       - gitlab
   exim:
     image: tianon/exim4
     restart: always
     container_name: 'exim'
-    hostname: 'gitlab.test.com'
+    hostname: '$GITLAB_DOMAIN'
     ports:
-      - '2525:25'
+      - '25:25'
     networks:
       - gitlab
 networks:
